# saboga-api

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.rst  Dockerfile  LICENSE.md  Makefile  README.md  check_version.sh  conda_env.yaml  entrypoint.sh  environment.yml  justfile  manage.py  pyproject.toml  pytest.ini  ruff.toml  tox.ini
.codspeed/: results_1743934473109.json  results_1743934499380.json  results_1743934843791.json  results_1743934863693.json  results_1743935909787.json  results_1743935947121.json  results_1743936694478.json  results_1743936866143.json  results_1743936919640.json  results_1743936958776.json  results_1743937074969.json  results_1743937098312.json  results_1743937111960.json  results_1743937139715.json  results_1743937153415.json  results_1743937174361.json  results_1743937260731.json  results_1743938573429.json
.run/: Dev Environment.run.xml
alembic/: env.py
api/: instrumentation.py  logger.py  models.py  serializers.py  urls.py  views.py
api-testing/: .dockerignore  .env  Dockerfile  app.py  boardgame.sql  codspeed.Dockerfile  docker-compose.monitoring.yml  docker-compose.yml  entrypoint.sh  nginx-static.conf  seed-dev-db.py  traefik-certs.yaml
changelog.d/: 20231217_223543_tjarksievers_complete_game_routes.rst  20240406_152043_tjarksievers_add_all_database_models.rst  20240407_205157_tjarksievers_add_relationships.rst  20240410_212300_tjarksievers_deal_with_empty_fields.rst  20240410_212807_tjarksievers_users.rst  20240511_203005_tjarksievers_users.rst  20240518_185248_tjarksievers_add_users.rst  20240519_093219_tjarksievers_add_collections_to_users.rst  20240520_211127_tjarksievers_add_collections_to_users.rst  20240520_211144_tjarksievers_add_collections_to_users.rst  20240628_231654_tjarksievers_add_results_to_plays.rst  20240629_133116_tjarksievers_some_fixes.rst  20240629_203412_tjarksievers_add_results.rst  20240718_130550_tjarksievers_connect_to_bgg.rst  20240719_204053_tjarksievers_complete_boardgames_route.rst  20240722_193823_tjarksievers_complete_boardgames_route.rst  20240722_221717_tjarksievers_complete_boardgames_route.rst  20240722_221748_tjarksievers_complete_boardgames_route.rst  20240722_222026_tjarksievers_complete_boardgames_route.rst  20240723_071512_tjarksievers_docs.rst  20240723_081423_tjarksievers_docs.rst  20240723_083146_tjarksievers_docs.rst  20240723_085903_tjarksievers_docs.rst  20240806_193513_tjarksievers_refactor_scraper.rst  20241110_205934_tjarksievers_fix_historical_data.rst  20241206_223532_tjarksievers_fix_historical_data.rst  20250319_205246_tjarksievers_fix_api_response.rst  20250320_060701_tjarksievers_return_historical_data.rst  20250322_142744_tjarksievers_update_scraper.rst  20250322_143020_tjarksievers_update_scraper.rst  20250322_201629_tjarksievers_setup_metrics.rst  20250323_161309_tjarksievers_add_loki.rst  20250323_161647_tjarksievers_add_loki.rst  20250323_212428_tjarksievers_fix_compare_to_date.rst  20250323_215016_tjarksievers_add_metric_with_boardgames_without_rank.rst  20250324_090211_tjarksievers_predict_future_ranks.rst  20250324_180554_tjarksievers_scrape_remaining_data.rst  20250324_191206_tjarksievers_add_remaining_routes.rst  20250324_212424_tjarksievers_add_search.rst  20250324_225238_tjarksievers_scrape_full_rank_data.rst  (+41 more)
migrations/: alembic.ini  (+4 more)
(+178 files in other folders)
