[project]
name = "saboga-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-extensions>=4.1",
    "djangorestframework>=3.16.1",
    "faker>=40.8.0",
    "networkx>=3.6.1",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "psycopg[binary,pool]>=3.3.3",
    "scipy>=1.17.1",
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "django-extensions>=4.1",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]
